infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rollcall
  labels:
    app.kubernetes.io/name: rollcaller
    app.kubernetes.io/part-of: rollcaller
